added test using pytest

--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 DEBUG = True
 DATABASE_URL = postgresql://Shayandb_owner:VjURFkui4AE5@ep-tiny-bar-a1fduq6l-pooler.ap-southeast-1.aws.neon.tech/tododb?sslmode=require
+TEST_DATABASE_URL = postgresql://Shayandb_owner:VjURFkui4AE5@ep-dry-unit-a1kc7xp6-pooler.ap-southeast-1.aws.neon.tech/tododb?sslmode=require
